Fix mobile spacing

--- a/src/styles/components/mosaic.styl
+++ b/src/styles/components/mosaic.styl
@@ -1,8 +1,8 @@
 .mosaic
   background-image url(../images/map-background.png)
   margin 0
-  padding 0
   margin-bottom: -444px;
+  padding 0
 
   &__container
     margin 0 auto
@@ -78,6 +78,7 @@
     text-align center
 
   @media all and (max-width 600px)
+    margin-bottom: 0px;
     &__container
       padding 4rem 0 0 0
 
@@ -99,11 +100,12 @@
       font-size 1rem
 
   @media all and (min-width 601px) and (max-width 800px)
+    margin-bottom: 0px;
     &__button
       margin 0 auto 8rem auto
 
     &__box
-      margin-bottom -26rem
+      margin-bottom -17rem
 
     &__item
       display inline-block
