--- a/src/styles/components/services.styl
+++ b/src/styles/components/services.styl
@@ -67,6 +67,7 @@
       margin 0 auto 2rem auto
 
   @media all and (max-width 801px)
+    margin-top 48px
     &__container
       padding-bottom 0
       width 100%
